SONARIAC-840 Convert JSON to Minimal ARM AST Model: Improve Property to support array and object (#687)